[tool.poetry]
name = "repl-nix-discordchatgpt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_discordchatgpt"}]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.2"
openai = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
